--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,16 @@ requires-python = ">=3.10"
 dependencies = [
     "matplotlib>=3.10.0",
     "pandas>=2.2.3",
+    "pytest>=8.3.4",
 ]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/my_project"]
+
+[tool.pytest.ini_options]
+pythonpath = "src"
+testpaths = "tests"
