chore: update .gitignore, add LICENSE, enhance README, and modify pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,31 @@
 [project]
 name = "xsam"
 version = "0.1.0"
-description = "Add your description here"
-readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "matplotlib>=3.10.0",
     "pandas>=2.2.3",
     "pytest>=8.3.4",
 ]
+authors = [
+    {name = "Stabile Frisur", email = "stabilefrisur@proton.me"},
+]
+description = "XSAM assistant"
+readme = "README.md"
+license = "MIT"
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+]
+
+[project.urls]
+homepage = "https://pypi.org/project/xsam/"
+repository = "https://github.com/stabilefrisur/xsam.git"
 
 [build-system]
 requires = ["hatchling"]
