--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 requires-python = ">=3.10"
 dependencies = [
     "matplotlib>=3.10.0",
-    "pandas>=2.2.3",
+    "pandas[computation,excel,output-formatting,performance,plot]>=2.2.3",
     "pytest>=8.3.4",
 ]
 authors = [
@@ -32,8 +32,11 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/my_project"]
+packages = ["src/xsam"]
 
 [tool.pytest.ini_options]
-pythonpath = "src"
-testpaths = "tests"
+pythonpath = ["src"]
+testpaths = ["tests"]
+
+[project.scripts]
+xsam = "xsam.main:main"
