--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,9 @@ build-backend = "hatchling.build"
 [tool.hatch.build.targets.wheel]
 packages = ["src/xsam"]
 
+[tool.hatch.build]
+exclude = ["docs", "output"]
+
 [tool.pytest.ini_options]
 pythonpath = ["src"]
 testpaths = ["tests"]
