feat: add Asset, Trade, and Portfolio classes with PnL calculations and update dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "xsam"
 version = "0.1.8"
 requires-python = ">=3.10"
 dependencies = [
+    "attrs>=25.3.0",
     "matplotlib>=3.10.0",
     "pandas[computation,excel,output-formatting,performance,plot]>=2.2.3",
     "scikit-learn>=1.6.1",
