Adds chart types and configuration for xsam module
Implements various chart types including distribution, dual-axis line, efficient frontier over time, and regression scatter plots with customizable configurations.

Enhances project dependencies by adding necessary libraries for plotting and data handling.

Updates testing suite to cover new chart functionalities.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ docs/
 output/
 *.log
 todo.md
+best_practices.md
+src/xsam/charts/feature_description.md
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
