Adds Dash app for chart visualization
Implements a responsive UI for visualizing charts using Dash.

Includes dynamic controls for selecting plot types and configurations, enhancing user experience.

Updates dependencies to include dash-bootstrap-components for better styling.

Improves documentation for functionality and usage.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ requires-python = ">=3.10"
 dependencies = [
     "attrs>=25.3.0",
     "dash>=3.0.3",
+    "dash-bootstrap-components>=2.0.1",
     "matplotlib>=3.10.0",
     "pandas[computation,excel,output-formatting,performance,plot]>=2.2.3",
     "plotly>=6.0.1",
