--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ output/
 todo.md
 best_practices.md
 src/xsam/charts/feature_description.md
+src/xsam/charts/ui_best_practices.md
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
